# aecheck-data

./: .gitignore  README.md  data.xlsx  data_backup.xlsx  data_v2.xlsx  pyproject.toml
.github/: sync.yml
.github/workflows/: sync-data.yml
code/: config.py  decorators.py  function.py  link.py  step0.py  step1.py  step2.py
migration/code/: ae_buddy.py  ae_character.py  ae_dungeon.py  ae_dungeon_map.py  ae_i18n.py  ae_personality_map.py  image.py
migration/sql/: ae_buddy.sql  ae_character.sql  ae_dungeon.sql  ae_dungeon_map.sql  ae_i18n.sql  ae_personality_map.sql
result/: updates.tsx
result/data/: character.json
result/i18n/: en.json  jp.json  ko.json
