[tool.poetry]
name = "aecheck-data"
version = "0.1.0"
description = "Data & processing code for AE Check"
authors = ["HU-Lee <haulrest@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
pandas = "^2.2.0"
pillow = "^10.2.0"
pytest = "^8.0.0"
pyarrow = "^15.0.0"
oracledb = "^2.4.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
